<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="welcome_to_our_app">Enjoy Your ShoeApp Experience!</string>
    <string name="explore_our_features_and_enjoy">We hope you enjoy using ShoeApp to manage your shoe collection. Have fun exploring and discovering new shoes!!</string>
    <string name="app_logo">app logo</string>
    <string name="shoeapp_welocme_title">View Instructions</string>
    <string name="shoeapp_instructions">>> View Shoe List \n >> Add New Shoes \n >> View Shoe Details \n >> Logout </string>
    <string name="shoeapp_instructions_title">ShoeApp Instructions : </string>
    <string name="thank_you_for_shoeapp_instructions">Thank you for choosing ShoeApp!\nBelow are some instructions to help you get started</string>
    <string name="view_shoe_list">View shoe list</string>
    <string name="view_instructions">View Instructions</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="shoeimage">shoe image</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">logout</string>
    <string name="size_format">%.2f</string>
    <string name="email_hints">example@gmail.com</string>
    <string name="password_hints">******</string>
</resources>
