<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.shoelist.ShoeViewModel" />

        <variable
            name="shoeDetailsFragment"
            type="com.udacity.shoestore.screens.shoedetails.ShoeDetailFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_background"
        android:foregroundGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/bg_login_trans"
            android:gravity=""
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/txt_title"
                style="@style/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/add_shoe" />


            <TextView
                android:id="@+id/txt_shoe_name"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/shoe_name" />

            <EditText
                android:id="@+id/et_shoe_name"
                style="@style/paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:gravity="start"
                android:inputType="text"
                android:labelFor="@id/et_shoe_name"
                android:text="@{viewModel.shoe.name}" />

            <TextView

                android:id="@+id/txt_company"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:gravity="start"
                android:text="@string/company" />

            <EditText
                android:id="@+id/et_company"
                style="@style/paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:gravity="start"
                android:inputType="text"
                android:labelFor="@id/et_company"
                android:text="@{viewModel.shoe.company}" />

            <TextView
                android:id="@+id/txt_shoe_size"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:text="@string/shoe_size" />

            <EditText
                android:id="@+id/et_shoe_size"
                style="@style/paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:gravity="start"
                android:inputType="numberDecimal"
                android:labelFor="@id/et_shoe_size"
                android:text="@{@string/size_format(viewModel.shoe.size)}" />

            <TextView
                android:id="@+id/txt_description"
                style="@style/paragraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/description" />

            <EditText
                android:id="@+id/et_Description"
                style="@style/paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:inputType="textMultiLine"
                android:labelFor="@id/et_Description"
                android:text="@{viewModel.shoe.description}" />


            <Button
                android:onClick="@{() -> shoeDetailsFragment.addShoeTask()}"
                android:id="@+id/btn_save"
                style="@style/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:text="@string/save" />


            <Button
                android:onClick="@{() -> shoeDetailsFragment.cancelTask()}"
                android:id="@+id/btn_cancel"
                style="@style/buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/_red" />

        </LinearLayout>

    </ScrollView>
</layout>
